syntax = "proto3";

package warehouse;

option go_package = "protoc/warehouse;warehouse";

service Warehouse {
	rpc GetProductById (GetProductByIdRequest) returns (GetProductByIdResponse);
}
message GetProductByIdRequest {
	uint32 product_id = 1;
}

message Product {
	uint32 id = 1;
	string name = 2;
	string desc = 3;
	uint32 price = 4;
	uint32 quantity = 5;
}

message GetProductByIdResponse {
	string msg = 1;
	uint32 status = 2;
	Product product = 3;
}
